--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@
 language: php
 
 # This tells Travis CI to use its new architecture.  Everything is better!
-sudo: false
+sudo: true
 
 addons:
+  chrome: stable
   firefox: "47.0.1"
-  postgresql: "9.3"
+  postgresql: "9.4"
   apt:
     packages:
-      - oracle-java8-installer
-      - oracle-java8-set-default
+      - oracle-java9-installer
+      - oracle-java9-set-default
       - chromium-chromedriver
 
 # This tells Travis CI to cache Composer's cache.  Speeds up build times.
@@ -23,7 +24,6 @@ cache:
 # here will create a separate build and run the tests against that version of PHP.
 # WARNING, PHP7 only works in Moodle 3.0.1 or later!
 php:
- - 7.0
  - 7.1
  - 7.2
 
