--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,14 +21,14 @@ before_script:
 .job_template: &job_definition
   script:
     - moodle-plugin-ci phplint
-#    - moodle-plugin-ci phpdoc
     - moodle-plugin-ci phpcpd
-    - moodle-plugin-ci phpcbf
+#    - moodle-plugin-ci phpcbf
     - moodle-plugin-ci phpmd
     - moodle-plugin-ci codechecker
     - moodle-plugin-ci validate
     - moodle-plugin-ci phpunit
     - moodle-plugin-ci behat
+    - moodle-plugin-ci phpdoc
 
 code_checker:
   <<: *job_definition
