--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ before_script:
     - moodle-plugin-ci validate
     - moodle-plugin-ci phpunit
     - moodle-plugin-ci behat
-    - moodle-plugin-ci phpdoc
+#    - moodle-plugin-ci phpdoc
 
 code_checker:
   <<: *job_definition
