--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,13 +55,13 @@ variables:
 code_checker_pgsql:
   extends: .postgres
   <<: *job_definition
-  image: amcdev/moodle-plugin-ci:7.4
+  image: amcdev/moodle-plugin-ci:7.4-n.16
   variables:
-    MOODLE_BRANCH: "MOODLE_311_STABLE"
+    MOODLE_BRANCH: "master"
 
 code_checker_mariadb:
   extends: .mariadb
   <<: *job_definition
-  image: amcdev/moodle-plugin-ci:7.4
+  image: amcdev/moodle-plugin-ci:7.4-n.16
   variables:
-    MOODLE_BRANCH: "MOODLE_311_STABLE"
+    MOODLE_BRANCH: "master"
