--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,8 +34,8 @@ variables:
     #- moodle-plugin-ci behat --profile chrome
   parallel:
     matrix:
-      - MOODLE_BRANCH: [ "MOODLE_404_STABLE" ]
-        PHP_VERSION: [ "8.1", "8.2" ]
+      - MOODLE_BRANCH: [ "MOODLE_405_STABLE" ]
+        PHP_VERSION: [ "8.1", "8.2", "8.3" ]
 
 test:postgres:
   <<: *job_configuration
