--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,18 +24,21 @@ variables:
     - cd ../..
     - moodle-db-isready
     - moodle-plugin-ci install --moodle="moodle-upstream-core" --db-host=$DB_HOST --db-port=$DB_PORT
+    - eval $(failed setup-command)
   script:
-    - moodle-plugin-ci phplint
-    - moodle-plugin-ci phpcpd
-    - moodle-plugin-ci phpmd
-    - moodle-plugin-ci codechecker
+    - moodle-plugin-ci phplint || failed
+    - moodle-plugin-ci phpmd || failed
+    - moodle-plugin-ci phpcs
     - moodle-plugin-ci validate
     - moodle-plugin-ci savepoints
     - moodle-plugin-ci mustache
-    #- moodle-plugin-ci grunt
-    #- moodle-plugin-ci phpdoc
+    - moodle-plugin-ci grunt
+    - moodle-plugin-ci phpdoc
     - moodle-plugin-ci phpunit
     - moodle-plugin-ci behat --profile chrome
+    - failed result
+  after_script:
+    - failed report
   parallel:
     matrix:
       - MOODLE_BRANCH: [ "MOODLE_405_STABLE" ]
@@ -71,4 +74,3 @@ test:mariadb:
     DB: "mariadb"
     DB_HOST: "mariadb"
     DB_PORT: 3306
-
